SF Primes/src/objects/Field_Value_Conditions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Contains__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EqualsTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EqualsTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_EqualsTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not EqualsTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBoolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBoolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTrue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTrue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Value Conditions</label>
</CustomObject>